task1/test_results_no_defects/infer_test/memory_leak/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/02.wo_Defects/memory_leak.c:97: error: Memory Leak
  Pulse found a potential memory leak. Memory dynamically allocated at line 97 by call to `malloc`, is not freed after the last access at line 97, column 3.
  95. 	for(i= 0; i<5 ;i++)
  96. 	{
  97. 		(s+i)->buf = (char*)malloc(25* sizeof(char)); /*Tool should not detect  this line as error*/ /*No ERROR:Memory Leakage */
        ^
  98. 	}
  99. 	strcpy((s+4)->buf,s1);

Found 1 issue
  Issue Type(ISSUED_TYPE_ID): #
    Memory Leak(MEMORY_LEAK): 1
